# pyonrpi

./: .gitignore  1  README.md  pyproject.toml  rp4.md
data/json/: 11-11-2025.json
scripts/: main.py  run_script.sh  run_test.sh  support.py  testpin.py
